Revision history for autodie

        * BUILD: Removed Module::AutoInstall, which previously
          was loaded but not used, but currently doesn't actually
          do what we want.

        * TEST: We manually stringify $@ for one test in
          exception_class.t to avoid a bug involving overloaded
          classes containing apostrophies.

1.997 Thu Dec  4 15:14:00 AUSEDT 2008
        * TEST: Test::More 0.86 (and possibly 0.85) appears to
          dislike package names that contain the apostrophe
          character (these occur in some tests for Klingon
          localisation).  We now skip these tests on systems
          with Test::More >= 0.85 installed.

1.996 Thu Dec  4 09:07:39 AUSEDT 2008
        * FEATURE: Child classes can now provide an exception_class()
          method that returns the desired exception class, rather
          than over-riding the whole throw() method.  Existing classes
          that over-ride throw() will still work as before.

        * BUGFIX: Fixed a bug where multiple autodie-derived classes
          would share the same subroutine cache.  This could result
          in excptions from the wrong class being thrown.

          This bug did not affect programs which used only autodie,
          or a single autodie-derived class.

        * BUGFIX: Missing 1.995 version tag added to export list.

        * TEST: Make sure that we always have a working version tag for
          our current version.

1.995 Sun Nov 30 17:30:16 AUSEDT 2008

        * FEATURE: Errors from 2-argument open now have more human
          friendly error messages for reading, writing, and appending.

        * FEATURE: autodie will never print unsightly references to
          GLOB(0x...) structures in error messages; instead it uses
          the placeholder '$fh'.

        * BUILD: Bundled Module::AutoInstall makes it clear to users
          they need to install IPC::System::Simple for autodying
          system() support.
