@@ -8,6 +8,10 @@ Revision history for autodie
           exception_class.t to avoid a bug involving overloaded
           classes containing apostrophies.
 
+        * TEST: unlink.t and mkdir.t avoid changing directories,
+          which could cause spurious failures when @INC includes
+          paths relative to the current working directory.
+
 1.997 Thu Dec  4 15:14:00 AUSEDT 2008
         * TEST: Test::More 0.86 (and possibly 0.85) appears to
           dislike package names that contain the apostrophe
